Fixed table overflow issue

--- a/src/app.css
+++ b/src/app.css
@@ -143,6 +143,6 @@ li {
 	}
 	
 	table tbody tr td {
-		@apply px-6 py-4 whitespace-nowrap text-lg sm:text-base md:text-lg font-medium text-gray-800 dark:text-neutral-200	
+		@apply px-6 py-4 text-lg sm:text-base md:text-lg font-medium text-gray-800 dark:text-neutral-200	
 	}
 }
